--- a/ponder_wk1/meta-css.html
+++ b/ponder_wk1/meta-css.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Ian Miller">
     <title>Meta and CSS Review</title>
     <link rel="stylesheet" href="meta-css.css">
+    <script src="meta-css.js" defer></script>
 </head>
 <body>
     <div id="content">
