--- a/mission/index.html
+++ b/mission/index.html
@@ -14,6 +14,7 @@
     <header>
       <h1>MISSION STATEMENT</h1>
       <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
+      <button id="themeToggle">Toggle Dark Mode</button>
       <hr>
     </header>
 
@@ -45,11 +46,12 @@
       </ol>
     </main>
 
-    <footer>
-  <img src="byui-logo-blue.webp" alt="BYU-Idaho Logo">
+   <footer>
+  <img id="logo" src="byui-logo-blue.webp" alt="BYU-Idaho Logo">
 </footer>
 
   </div>
+  <script src="script.js" defer></script>
 </body>
 </html>
 
