--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -3,89 +3,58 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RecipeBook • Apple Crisp</title>
+  <title>RecipeBook</title>
 
-  <!-- Google Font for headlines -->
+  <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="recipes.css">
-
-  <!-- ===== Social / Open Graph (update the URL once live) ===== -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="RecipeBook — Cozy Apple Crisp">
-  <meta property="og:description" content="Simple, warm, and perfect with vanilla ice cream.">
-  <meta property="og:url" content="https://githubusername.github.io/wdd131/recipes/recipes.html">
-  <!-- Ideally 1200x630; temporary placeholder points at your logo until you export a social image -->
-  <meta property="og:image" content="recipe-book.png">
-
-  <!-- X (Twitter) -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RecipeBook — Cozy Apple Crisp">
-  <meta name="twitter:description" content="Simple, warm, and perfect with vanilla ice cream.">
-  <meta name="twitter:image" content="recipe-book.png">
-
-  <!-- Icons (use if/when you add them) -->
-  <link rel="icon" href="favicon.ico">
-  <!-- Export a 180×180 PNG named below to satisfy Apple touch icon requirement -->
-  <link rel="apple-touch-icon" href="apple-touch-icon-180.png">
+  <link rel="stylesheet" href="./recipes.css" />
 </head>
-
 <body>
   <header class="site-header wrapper">
     <div class="brand">
-      <img class="brand__logo" src="recipe-book.png" alt="" aria-hidden="true">
+      <img class="brand__logo" src="./recipe-book.png" alt="RecipeBook logo">
       <h1 class="brand__title">RecipeBook</h1>
     </div>
 
     <form class="search" role="search" aria-label="Find a recipe" action="#" method="get">
       <label class="visually-hidden" for="q">Find a recipe</label>
-      <input id="q" name="q" type="search" placeholder="Find a recipe">
+      <input id="q" name="q" type="search" placeholder="Find a recipe by name, tag, or description" autocomplete="off">
       <button type="submit" class="search__btn" aria-label="Search">
-        <img src="search.svg" alt="" aria-hidden="true">
+        <img src="./search.svg" alt="" aria-hidden="true">
       </button>
     </form>
   </header>
 
   <main class="wrapper">
-    <article class="recipe">
+    <!-- Random hero recipe (populated by JS) -->
+    <article class="recipe" aria-live="polite">
       <figure class="recipe__media">
-        <img src="apple-crisp.jpg" alt="Apple crisp topped with a scoop of vanilla ice cream">
+        <img src="./recipe-book.png" alt="Recipe image placeholder">
       </figure>
-
       <div class="recipe__body">
-        <span class="pill">dessert</span>
-
-        <h2 class="recipe__title">Apple Crisp</h2>
-
-        <!-- Accessible star rating -->
-        <span class="rating" role="img" aria-label="Rating: 4 out of 5 stars">
-          <span aria-hidden="true" class="icon-star">⭐</span>
-          <span aria-hidden="true" class="icon-star">⭐</span>
-          <span aria-hidden="true" class="icon-star">⭐</span>
-          <span aria-hidden="true" class="icon-star">⭐</span>
-          <span aria-hidden="true" class="icon-star-empty">☆</span>
-        </span>
-
-        <!-- Hidden on mobile, shown on larger screens via CSS -->
-        <p class="recipe__desc">
-          This apple crisp recipe is a simple yet delicious fall dessert that’s great served warm with vanilla ice cream.
-        </p>
+        <span class="pill">tag</span>
+        <h2 class="recipe__title">Recipe Title</h2>
+        <span class="rating" role="img" aria-label="Rating: 0 out of 5 stars">★★★★★</span>
+        <p class="recipe__desc">Description will appear here.</p>
       </div>
     </article>
+
+    <!-- Search results mount (ONE ONLY) -->
+    <section id="results" class="results" aria-live="polite"></section>
   </main>
 
   <footer class="site-footer wrapper">
-    <a class="attr" href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">
+    <a class="attr" href="https://www.flaticon.com/free-icons/recipe" target="_blank" rel="noreferrer noopener">
       Recipe icons created by Freepik - Flaticon
     </a>
-
     <div class="social">
-      <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates -->
-      <a href="#" aria-label="Instagram"><img src="instagram_icon.svg" alt=""></a>
-      <a href="#" aria-label="YouTube"><img src="youtube_icon.svg" alt=""></a>
-      <a href="#" aria-label="Pinterest"><img src="pinterest_icon.svg" alt=""></a>
+      <a href="#" aria-label="Instagram"><img src="./instagram_icon.svg" alt=""></a>
+      <a href="#" aria-label="YouTube"><img src="./youtube_icon.svg" alt=""></a>
+      <a href="#" aria-label="Pinterest"><img src="./pinterest_icon.svg" alt=""></a>
     </div>
   </footer>
+
+  <!-- App script (ONE ONLY) -->
+  <script src="./recipes.js" defer></script>
 </body>
 </html>
